"ChangeLog"

2006-01-15	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-17-merged-temp-04:
	  Branch merge.  


2006-01-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-16-temp-03:
	  More libc function config tests, pertaining to <ctype.h>.
	  Contemplating support for fat binaries in the future.  


2006-01-12	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-15:
	  Many new configuration checks for libstdc functions were
		added to configure.ac, and used in "src/util/libc.h".


2005-12-13	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-01:
	  Added "make help" target to all generated Makefiles.  
		Gives brief description of global and local make targets
		per directory.  Never be lost again!


2005-12-12	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-merged-rename-00-06:
	  Merge to trunk.  
	  Completed renaming phases: all (most) traces of "art" and "ART"
		have been removed, and replaced with consistent names.  
	  Source tree is now purged of ART, blessed with HACKT.  
	  Entire test suite has been renamed, including intermediate files.
	  Documentation updated to reflect changes.  
	  Also includes many configuration improvements.  
	  Restored parallel-make-ability, previously broken.  


2005-12-12	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-71-rename-00-05:
	  configure.ac: simplified header file generation, 
		but wishing for combined AC_CONFIG_FILES and AC_CONFIG_HEADERS
		functionality (perform AC_SUBST *and* check for file change).
	  in test/: major file renaming for test setup.  
	  in src/: minor comment updating and file-cross-reference renaming.  


2005-12-11	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-71-rename-00-03:
	  Played around with other configure-generating src/header_deps.make
		but with limited success (failure).  